--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <!-- <i class="fas fa-star" id=""></i> ne marche pas avec les ID ou parennage. Il faut utilliser son élément "<i>"" directly -->
+                                <i class="fas fa-star inactive"></i>
                             </div>
                             
                         </div>
@@ -113,7 +113,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <!-- <i class="fal fa-star"></i>  ne marche pas avec les ID ou parennage. Il faut utilliser son élément "<i>"" directly -->
+                                <i class="fas fa-star inactive"></i>
                             </div>
                         </div>
                         <div class="phototel">
@@ -124,8 +124,8 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <!-- <i class="fal fa-star"></i> ne marche pas avec les ID ou parennage. Il faut utilliser son élément "<i>"" directly -->
-                                <!-- <i class="fal fa-star"></i> ne marche pas avec les ID ou parennage. Il faut utilliser son élément "<i>"" directly -->
+                                <i class="fas fa-star inactive"></i>
+                                <i class="fas fa-star inactive"></i>
                             </div>
                         </div>
                         <div class="phototel">
@@ -137,7 +137,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <!-- <i class="fal fa-star"></i> ne marche pas avec les ID ou parennage. Il faut utilliser son élément "<i>"" directly -->
+                                <i class="fas fa-star inactive"></i>
                             </div>
                         </div>
                         <div class="phototel">
@@ -196,7 +196,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <!-- <i class="fal fa-star"></i> ne marche pas avec les ID ou parennage. Il faut utilliser son élément "<i>"" directly -->
+                                <i class="fas fa-star inactive"></i> 
                             </div
                         </div>
                     </div>
@@ -230,6 +230,7 @@
                     <h2 class="soustitre">Activités à Marseille</h2>
                 </div >
                 <div class="actMars">
+
                     <div class="patrouille" id="soupatrouill">
                         <figure class="emplwoan">
                             <img id="fgcs1" src="./images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
@@ -251,8 +252,8 @@
                     </div>
                     <div class="patrouille">
                         <div class="soupatrouill">
-                            <figure id="pfgcs2">
-                                <img class="emplwoan" id="fgcs2" src="./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
+                            <figure id="pfgcs2" class="emplwoan">
+                                <img  id="fgcs2" src="./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
                                 <figcaption class="soustitre">Parc National des Calanques</figcaption>
                             </figure>
                         </div>
