resolution de la petite taille de figurcaption due par le div .soupatrouille en trop et a enlever

--- a/index.html
+++ b/index.html
@@ -250,8 +250,12 @@
                         </div>
                         
                     </div>
+                        <!--  debut test -->
+
+                        <!-- Fin test-->
+                                                                <!-- ci dessous il y a soupastrouille en trop mais il est bon pour la photo -->
                     <div class="patrouille">
-                        <div class="soupatrouill">
+                        <div class="soupatrouill">          <!--     <======= voila le début du dive aui gene le figurcaption         -->
                             <figure id="pfgcs2" class="emplwoan">
                                 <img  id="fgcs2" src="./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
                                 <figcaption class="soustitre">Parc National des Calanques</figcaption>
@@ -279,18 +283,18 @@
             <!--  ici le test est fini -->
         </main>
         <footer>
-            <div>
+            <div class="footcat">
                 <h3 class="soustitre">A propos</h3>
                 <h4>Fonctionnement du Site </h4>
                 <h4>Conditions générales de vente</h4>
                 <h4>Données et Confidentialité</h4>
             </div>
-            <div>
+            <div class="footcat">
                 <h3 class="soustitre">Nos hébergements</h3>
                 <h4>Charte Qualité</h4>
                 <h4>Soumettre votre hôtel</h4>
             </div>
-            <div>
+            <div class="footcat">
                 <h3 class="soustitre">Assistance</h3>
                 <h4>Centre d'aide</h4>
                 <h4>Nous contacter</h4>
