--- a/index.html
+++ b/index.html
@@ -252,10 +252,9 @@
                     </div>
                         <!--  debut test -->
 
-                        <!-- Fin test-->
-                                                                <!-- ci dessous il y a soupastrouille en trop mais il est bon pour la photo -->
+                        <!-- Fin-->
                     <div class="patrouille">
-                        <div class="soupatrouill">          <!--     <======= voila le début du dive aui gene le figurcaption         -->
+                        <div class="soupatrouill">
                             <figure id="pfgcs2" class="emplwoan">
                                 <img  id="fgcs2" src="./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
                                 <figcaption class="soustitre">Parc National des Calanques</figcaption>
