symboles € et etc..

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="phototel">
                             <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="" class="impic" >
                             <h3 class="soustitre">Auberge La Cannebière</h3>
-                            <h4>Nuit à partir de 25euros</h4>
+                            <h4>Nuit à partir de 25€</h4>
                             <div class="star">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -95,7 +95,7 @@
                         <div class="phototel">
                             <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="" class="impic" >
                             <h3 class="soustitre">Hôtel Du Port</h3>
-                            <h4>Nuit à partir de 52euros</h4>
+                            <h4>Nuit à partir de 52€</h4>
                             <div class="star">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -107,7 +107,7 @@
                         <div class="phototel">
                             <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="" class="impic" >
                             <h3 class="soustitre">Hôtel Les Mouettes</h3>
-                            <h4>Nuit à partir de 76euros</h4>
+                            <h4>Nuit à partir de 76€</h4>
                             <div class="star">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -119,7 +119,7 @@
                         <div class="phototel">
                             <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="" class="impic" >
                             <h3 class="soustitre">Hôtel De La Mer</h3>
-                            <h4>Nuit à partir de 46euros</h4>
+                            <h4>Nuit à partir de 46€</h4>
                             <div class="star" >
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -131,7 +131,7 @@
                         <div class="phototel">
                             <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="" class="impic" >
                             <h3 class="soustitre">Auberge Le Panier</h3>
-                            <h4>Nuit à partir de 23euros</h4>
+                            <h4>Nuit à partir de 23€</h4>
                             <div class="star">
                                 <i i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -143,7 +143,7 @@
                         <div class="phototel">
                             <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="" class="impic" >
                             <h3 class="soustitre">Hôtel Chez Amina</h3>
-                            <h4>Nuit à partir de 96euros</h4>
+                            <h4>Nuit à partir de 96€</h4>
                             <div class="star">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -171,7 +171,7 @@
                         </figure>
                         <div class="haside">
                             <h3 class="soustitre">Hôtel Le Soleil Du Matin</h3>
-                            <h4>Nuit à partir de 128euros</h4>
+                            <h4>Nuit à partir de 128€</h4>
                             <div class="star" >
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -190,7 +190,7 @@
                         
                         <div class="haside">
                             <h3 class="soustitre">Au coeur de l'eau Chambres d'hôtes</h3>
-                            <h4>Nuit à partir de 71euros</h4>
+                            <h4>Nuit à partir de 71€</h4>
                             <div class="star">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -211,7 +211,7 @@
 
                         <div class="haside">
                             <h3 class="soustitre">Hôtel Tout Bleu et Blanc</h3>
-                            <h4>Nuit à partir de 68euros</h4>
+                            <h4>Nuit à partir de 68€</h4>
                             <div class="star"  >
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
