--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <header>
             <div id="marque"><img src="./images/logo/Reservia.svg" alt="" ></div>
             <nav class="nav-up">
-                <p id="li-heb"><a href="#hebrgmars">Hébergements</a></p>
-                <p id="li-activ"><a href="#activt">Activités</a></p>
-                <p id="li-inscript"><a href="https://openclassrooms.com/fr/">S'inscrire</a></p>
+                <p class="li" ><a href="#hebrgmars">Hébergements</a></p>
+                <p class="li" ><a href="#activt">Activités</a></p>
+                <p class="li" ><a href="https://openclassrooms.com/fr/">S'inscrire</a></p>
             </nav>
         </header>
         <main>
@@ -82,7 +82,7 @@
                         <div class="phototel">
                             <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="" class="impic" >
                             <h3 class="soustitre">Auberge La Cannebière</h3>
-                            <h4>Nuit à partir de 25€</h4>
+                            <h4>Nuit à partir de <b>25€</b></h4>
                             <div class="star">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -131,7 +131,7 @@
                         <div class="phototel">
                             <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="" class="impic" >
                             <h3 class="soustitre">Auberge Le Panier</h3>
-                            <h4>Nuit à partir de 23€</h4>
+                            <h4>Nuit à partir de <b>23€</b> </h4>
                             <div class="star">
                                 <i i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
