--- a/index.html
+++ b/index.html
@@ -261,15 +261,19 @@
                             </figure>
                         </div>
                     </div>
-                        <div class="patrouille" >   
-                            <figure class="emplduo" id="pfgcd3">
+                        <div class="patrouille" >  
+                            <div>
+
+                                <figure class="emplduo" id="pfgcd3">
                                 <img id="fgcd3" src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
                                 <figcaption class="soustitre">Notre-Dame-de-la-Garde</figcaption>
                             </figure> 
                             <figure class="emplduo" id="pfgcd4">
                                 <img id="fgcd4" src="./images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
                                 <figcaption class="soustitre">Parc Longchamp</figcaption>   
-                            </figure>                     
+                            </figure>
+                            </div> 
+                                                 
                         </div>
                         
                     </div>
