--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>C'est reparti après un super vieux bug</title>
+        <title>Page en bon devenir</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <!-- <link rel="stylesheet" href="test.css"> -->
         
