--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Page en bon devenir</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <!-- <link rel="stylesheet" href="test.css"> -->
+        <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+        <link rel="stylesheet" href="test.css">
         
     </head>
     <body>
