linkabled footcat and child

--- a/index.html
+++ b/index.html
@@ -287,20 +287,20 @@
         </main>
         <footer>
             <div class="footcat">
-                <h3 class="soustitre">A propos</h3>
-                <h4>Fonctionnement du Site </h4>
-                <h4>Conditions générales de vente</h4>
-                <h4>Données et Confidentialité</h4>
+                <h3 class="soustitre"><a href=" à rajouter ">A propos</a></h3>
+                <h4><a href=" à rajouter ">Fonctionnement du Site</a> </h4>
+                <h4><a href=" à rajouter ">Conditions générales de vente</a></h4>
+                <h4><a href=" à rajouter ">Données et Confidentialité</a></h4>
             </div>
             <div class="footcat">
-                <h3 class="soustitre">Nos hébergements</h3>
-                <h4>Charte Qualité</h4>
-                <h4>Soumettre votre hôtel</h4>
+                <h3 class="soustitre"><a href=" à rajouter ">Nos hébergements</a></h3>
+                <h4><a href=" à rajouter ">Charte Qualité</a></h4>
+                <h4><a href=" à rajouter ">Soumettre votre hôtel</a></h4>
             </div>
             <div class="footcat">
-                <h3 class="soustitre">Assistance</h3>
-                <h4>Centre d'aide</h4>
-                <h4>Nous contacter</h4>
+                <h3 class="soustitre"><a href=" à rajouter ">Assistance</a></h3>
+                <h4><a href=" à rajouter ">Centre d'aide</a></h4>
+                <h4><a href=" à rajouter ">Nous contacter</a></h4>
             </div>
         </footer>
     </body>
