avancée desktop et aussi dbt format iphone

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                 <aside>
                     <div id="popul">
                             <h2 class="soustitre">Les plus populaires</h2>
-                            <div id="courb"><i class="fas fa-chart-line"></i>
-                        </div>
+                            <span id="courb"><i class="fas fa-chart-line"></i>
+                            </span>
                     </div>
                   <div class="gaside">
                     <div id="1" class="picaside">
