deblocage des actmars

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <header>
             <div id="marque"><img src="./images/logo/Reservia.svg" alt="" ></div>
             <nav class="nav-up">
-                <p class="li" ><a href="#hebrgmars">Hébergements</a></p>
-                <p class="li" ><a href="#activt">Activités</a></p>
-                <p class="li" ><a href="https://openclassrooms.com/fr/">S'inscrire</a></p>
+                <p class="li" id="liun"><a href="#hebrgmars">Hébergements</a></p>
+                <p class="li" id="lideu"><a href="#activt">Activités</a></p>
+                <p class="li" id="litroi"><a href="https://openclassrooms.com/fr/">S'inscrire</a></p>
             </nav>
         </header>
         <main>
