--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </div >
                 <div class="actMars">
 
-                    <div class="patrouille" id="soupatrouill">
+                    <div class="patrouille">
                         <figure class="emplwoan">
                             <img id="fgcs1" src="./images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
                             <figcaption class="soustitre">Vieux Port </figcaption>
@@ -253,11 +253,12 @@
                         <!-- Fin-->
                     <div class="patrouille">
                         <div class="soupatrouill">
-                            <figure id="pfgcs2" class="emplwoan">
+                            
+                        </div>
+                        <figure id="pfgcs2" class="emplwoan">
                                 <img  id="fgcs2" src="./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
                                 <figcaption class="soustitre">Parc National des Calanques</figcaption>
                             </figure>
-                        </div>
                     </div>
                         <div class="patrouille" >  
                            
