--- a/index.html
+++ b/index.html
@@ -15,11 +15,25 @@
         <div id="body*-headr">
                 <header>
                 <div id="marque"><img src="./images/logo/Reservia.svg" alt="" ></div>
-                <nav class="nav-up">
-                    <p class="li" id="liun"><a href="#hebrgmars">Hébergements</a></p>
-                    <p class="li" id="lideu"><a href="#activt">Activités</a></p>
-                    <p class="li" id="litroi"><a href="https://openclassrooms.com/fr/">S'inscrire</a></p>
-                </nav>
+                <ul class="nav-up">
+                    <li class="li" id="liun"><a href="#hebrgmars">Hébergements</a></li>
+                    <li class="li" id="lideu"><a href="#activt">Activités</a></li>
+                    <li class="li" id="litroi"><a href="https://openclassrooms.com/fr/">S'inscrire</a></li>
+                </ul>
+                <div>
+                    
+                </div>
+
+
+                <!-- <ul class="nav-up">
+                    <li class="li" id="liun"><a href="#hebrgmars">Hébergements</a></li>
+                    <li class="li" id="lideu"><a href="#activt">Activités</a></li>
+                    
+                </ul>
+                <div>
+                    <div class="li" id="litroi"><a href="https://openclassrooms.com/fr/">S'inscrire</a></>
+                </div> -->
+
             </header>
             <main>
                 <div class="section">
