--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 <div class="icon">
                                     <i class="fas fa-dog"></i>
                                 </div>
-                                <input id="autocon" type="text" value="Animaux autorisés">
+                                <input id="autocon" type="text" value="Animaux autorisés">  <!-- autonimaux--> 
                             </div>
                             
                         </form>
