nav-up esthetic

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="utf-8" />
         <script src="https://kit.fontawesome.com/2eb67eaae2.js" crossorigin="anonymous"></script>
+        <link href="/chemin-vers-fontawesome/css/all.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway" rel="stylesheet">
