--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <!-- <label></label> -->
                             <span id="position"><i class="fas fa-map-marker-alt"></i></span>
                             <input id="insearch" type="text" name="villeforsearch" value="Marseille, France">
-                            <button id="search" type="button" value="Rechercher">Rechercher</button>
+                            <button class="btnSearch" id="search" type="button" value="Rechercher"></button>
                         </form>
                     </div>
                     <div class="form" id="filtre">
