--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 
 
-                        <label>Filtres</label>
+                        <!-- <label>Filtres</label>
 
                             <div id="eco">
                                 <div class="icon">
@@ -114,9 +114,10 @@
                                 <div class="icon">
                                     <i class="fas fa-dog"></i>
                                 </div>
-                                <input id="autocon" type="text" value="Animaux autorisés">  <!-- autonimaux--> 
-                            </div>
-                            
+                                <input id="autocon" type="text" value="Animaux autorisés">  autonimaux--> 
+                            </div> -->
+
+
                         <!-- Fin de cet autre test-->
                     </div>
                 </div>
