--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                     <i class="fas fa-dog"></i>
                                 </div>
                                 <input id="autocon" type="text" value="Animaux autorisés">  autonimaux--> 
-                            </div> -->
+                            </div>
 
 
                         <!-- Fin de cet autre test-->
