--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                                 </a>
                             </div>
                             <div class="phototel">
+                                <a href="">
                                 <img src="./assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="" class="impic" >
                                 <h3 class="soustitre">Hôtel Du Port</h3>
                                 <h4>Nuit à partir de 52€</h4>
@@ -155,6 +156,7 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
+                                </a>
                             </div>
                             <div class="phototel">
                                 <img src="./assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="" class="impic" >
