--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <h2 id="hebrgmars">Hébergements à Marseille</h2>
                         <section id="grp-pic">
                             <div class="phototel">
-                                <a href="#">
+                                <a href="https://github.com/">
                                 <img src="./assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="" class="impic" >
                                 <h3 class="soustitre">Auberge La Cannebière</h3>
                                 <h4>Nuit à partir de <b>25€</b></h4>
@@ -145,7 +145,7 @@
                                 </a>
                             </div>
                             <div class="phototel">
-                                <a href="">
+                                <a href="https://github.com/">
                                 <img src="./assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="" class="impic" >
                                 <h3 class="soustitre">Hôtel Du Port</h3>
                                 <h4>Nuit à partir de 52€</h4>
@@ -159,6 +159,7 @@
                                 </a>
                             </div>
                             <div class="phototel">
+                                <a href="https://github.com/">
                                 <img src="./assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="" class="impic" >
                                 <h3 class="soustitre">Hôtel Les Mouettes</h3>
                                 <h4>Nuit à partir de 76€</h4>
@@ -169,8 +170,10 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star inactive"></i>
                                 </div>
+                                </a>
                             </div>
                             <div class="phototel">
+                                <a href="https://github.com/">
                                 <img src="./assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="" class="impic" >
                                 <h3 class="soustitre">Hôtel De La Mer</h3>
                                 <h4>Nuit à partir de 46€</h4>
@@ -181,8 +184,10 @@
                                     <i class="fas fa-star inactive"></i>
                                     <i class="fas fa-star inactive"></i>
                                 </div>
+                                </a>
                             </div>
                             <div class="phototel">
+                                <a href="https://github.com/">
                                 <img src="./assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="" class="impic" >
                                 <h3 class="soustitre">Auberge Le Panier</h3>
                                 <h4>Nuit à partir de <b>23€</b> </h4>
@@ -193,8 +198,10 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star inactive"></i>
                                 </div>
+                                </a>
                             </div>
                             <div class="phototel">
+                                <a href="https://github.com/">
                                 <img src="./assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="" class="impic" >
                                 <h3 class="soustitre">Hôtel Chez Amina</h3>
                                 <h4>Nuit à partir de 96€</h4>
@@ -205,6 +212,7 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
+                                </a>
                             </div>
                         </section>
                         <h3>
