--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
                         </div>
                     <div class="gaside">
                         <div id="1" class="picaside">
+                            <a id="a1" href="https://github.com/">
                             <figure class="populaireaside">
                                 <img src="./assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="" >
                             </figure>
@@ -242,9 +243,12 @@
                                     <i class="fas fa-star"></i>
                                 </div>
                             </div>
+                            </a>
+
                         </div>
 
                         <div id="2" class="picaside">
+                            <a id="a2" href="https://github.com/">
                             <figure class="populaireaside">
                                 <img src="./assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="" >
                             </figure>
@@ -261,16 +265,17 @@
                                     <i class="fas fa-star inactive"></i> 
                                 </div
                             </div>
+                            </a>
                         </div>
                         
                         
                     </div>
 
                     <div id="3" class="picaside">
+                        <a id="a3" href="https://github.com/">
                         <figure class="populaireaside">
                             <img src="./assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="" >
                         </figure>
-
                             <div class="haside">
                                 <h3 class="soustitre">Hôtel Tout Bleu et Blanc</h3>
                                 <h4>Nuit à partir de 68€</h4>
@@ -282,6 +287,7 @@
                                     <i class="fas fa-star"></i>
                                 </div>
                             </div>
+                            </a>
                         </div>
                     </aside>
                 </section>
