id lesco change de <a> en <div>

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <label>Filtres</label>
                         
                             
-                            <a id="lesco" href="">
+                            <div id="lesco" href=""> <!-- Ici j'ai changé le <a> en <div> mais..  -->
                                 <div id="eco">
                                     <div class="icon">
                                         <i class="fas fa-money-bill-wave"></i>
@@ -71,7 +71,7 @@
                                         Animaux autorisés
                                     </div>
                                 </div>
-                            </a>
+                            </div>
                         </form> 
                         </div>
 
