--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
     <head>
         <meta charset="utf-8" />
         <script src="https://kit.fontawesome.com/2eb67eaae2.js" crossorigin="anonymous"></script>
-        <!-- <link href="/chemin-vers-fontawesome/css/all.css" rel="stylesheet"> -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway" rel="stylesheet">
@@ -19,7 +18,7 @@
                 <li id="marque">
                     <img src="./assets/images/logo/Reservia.svg" alt="" >
                  </li>
-                <li class="li" id="liun"><a href="#hebrgmars">Hébergements</a></li>
+                <li class="li" id="liun"><a href="#hebrgmars">Hébergements</a></li>  <!-- zone -->
                 <li class="li" id="lideu"><a href="#activt">Activités</a></li>
                 <li class="li" id="litroi"><a href="#">S'inscrire</a></li>
             </ul>    
