li:hover * en mobile egal none

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="form" id="filtre">
                         <form class="filtr"  action="paspret.js" method="POST" title="form">
                             <label>Filtres</label>
-                            <div id="lesco" href=""> <!-- Ici j'ai changé le <a> en <div> mais..  -->
+                            <div id="lesco" href="#"> <!-- Ici j'ai changé le <a> en <div> mais..  -->
                                 <div id="eco">
                                     <div class="icon">
                                         <i class="fas fa-money-bill-wave"></i>
@@ -231,7 +231,7 @@
                 </section>
                 <div class="boss">
                     <div id="hbm">
-                        <h2 class="soustitre">Activités à Marseille</h2>
+                        <h2 class="soustitre" id="activt" >Activités à Marseille</h2>
                     </div >
                     <div class="actMars">      
                         <div class="patrouille">
