--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
         
     </head>
     <body>
-        <div id="body-headr">
+        <div id="bodyPlusHeader">
             <header>
-            <ul class="nav-up">
-                <li id="marque">
+            <ul class="navigation">
+                <li id="logo">
                     <img src="./assets/images/logo/Reservia.svg" alt="" >
                  </li>
-                <li class="li" id="liun"><a href="#hebrgmars">Hébergements</a></li>  <!-- zone -->
-                <li class="li" id="lideu"><a href="#activt">Activités</a></li>
-                <li class="li" id="litroi"><a href="#">S'inscrire</a></li>
+                <li class="btnNavigation" id="btnHebergements"><a href="#hebergementsAMarseille">Hébergements</a></li>  <!-- zone -->
+                <li class="btnNavigation" id="btnActivites"><a href="#activitesMarseilles">Activités</a></li>
+                <li class="btnNavigation" id="btnsInscrire"><a href="#">S'inscrire</a></li>
             </ul>    
             </header>
             <main>
-                <div class="section">
-                    <h1 id="titre">Trouvez votre hébergement pour des vacances de rêve</h1>
-                    <h3 id="vilnatur">En pleine ville ou en pleine nature</h3>
-                    <div class="form" id="choix">
+                <div class="sectionFiltreRecherche">
+                    <h1 id="titreVacancesDeReve">Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <h3 id="phraseVilnatur">En pleine ville ou en pleine nature</h3>
+                    <div class="formulaireInserRecherche" id="insertionMotsCles">
                         <form  action="paspret.js.js" method="POST" title="Vous cherchez dans quelle ville?">
-                            <span id="position"><i class="fas fa-map-marker-alt"></i></span>
+                            <span id="logoPosition"><i class="fas fa-map-marker-alt"></i></span>
                             <input id="insearch" type="text" name="villeforsearch" value="Marseille, France">
                             <button class="btnSearch" id="search" type="button" value="Rechercher"></button>
                         </form>
                     </div>
-                    <div class="form" id="filtre">
+                    <div class="formulaireInserRecherche" id="filtre">
                         <form class="filtr"  action="paspret.js" method="POST" title="form">
                             <label>Filtres</label>
                             <div id="lesco" href="#"> <!-- Ici j'ai changé le <a> en <div> mais..  -->
@@ -67,13 +67,13 @@
                     </div>
                 </div>
                         
-                <div class="info">
+                <div class="infosNbrLogementsDispo">
                         <!--voici normalement dans ce commentaire l'icone a utiliser au lieu de celui ci-dessous. Mais il est indisponible, car sous utilisation pro: <i class="fal fa-info-circle"></i> -->  
                     <p><i class="fas fa-info-circle"></i>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
                 <section class="pilier" > 
                     <section id="gdpic">
-                        <h2 id="hebrgmars">Hébergements à Marseille</h2>
+                        <h2 id="hebergementsAMarseille">Hébergements à Marseille</h2>
                         <section id="grp-pic">
                             <div class="phototel">
                                 <a href="#">
@@ -231,7 +231,7 @@
                 </section>
                 <div class="boss">
                     <div id="hbm">
-                        <h2 class="soustitre" id="activt" >Activités à Marseille</h2>
+                        <h2 class="soustitre" id="activitesMarseilles" >Activités à Marseille</h2>
                     </div >
                     <div class="actMars">      
                         <div class="patrouille">
